# adk-secure-sessions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml  release-please-config.json  sonar-project.properties
.claude/rules/: conventions.md  dev-quality-checklist.md  pull-requests.md  pytest.md  python.md  sonarqube.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-tech-debt.yml  04-story.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  publish.yml  release-please.yml  tests.yml
.specify/memory/: constitution.md
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-test-infrastructure-foundation.md  1-10-trunk-based-migration-to-main.md  1-11-ci-cd-publish-pipeline.md  1-12-v010-release-community-announcement.md  1-2-schema-reservation-for-optimistic-concurrency.md  1-3-configurationerror-startup-validation.md  1-4-zero-warning-test-suite.md  1-5-encryption-overhead-benchmark.md  1-6a-adk-runner-integration-test.md  1-6b-concurrent-write-safety-verification.md  1-7-package-metadata-type-safety.md  1-8-security-md.md  1-9-readme-rewrite.md  2-1-docstring-examples-on-all-public-apis.md  2-2-mkdocs-documentation-site-setup.md  2-3-envelope-protocol-algorithm-specification-pages.md  2-4-published-roadmap-on-documentation-site.md  2-5-faq-page.md  2-6-getting-started-guide.md  3-1-aes-256-gcm-encryption-backend.md  3-2-per-key-random-salt-key-derivation.md  3-3-multi-backend-coexistence-dispatch.md  3-4-published-performance-benchmarks.md  4-4-zero-downtime-key-rotation.md  4-5-backend-authoring-documentation.md  6-1-fix-user-facing-drop-in-replacement-claims.md  6-2-fix-schema-independence-architecture-characterization-claims.md  6-3-add-superseded-markers-to-planning-artifacts-adrs.md  7-1-spike-findings.md  7-1-typedecorator-wrapping-spike.md  7-2-adr-architecture-migration-decision.md  7-3-rewrite-encryptedsessionservice-as-databasesessionservice-wrapper.md  7-4-test-migration-conformance-verification.md  7-5-documentation-mkdocs-site-updates.md  7-6-revise-epic-4-scope-roadmap.md  epic-1-retro-2026-03-01.md  epic-2-retro-2026-03-03.md  epic-6-retro-2026-03-05.md  epic-7-retro-2026-03-06.md  sprint-status.yaml  (+3 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-28.md  prd-validation-report.md  prd.md
_bmad-output/test-artifacts/: automation-summary.md  test-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/workflows/4-implementation/code-review/: checklist.md  instructions.xml  workflow.yaml
_bmad/bmm/workflows/4-implementation/create-story/: checklist.md  instructions.xml  template.md  workflow.yaml
_bmad/bmm/workflows/4-implementation/dev-story/: instructions.xml  workflow.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  algorithms.md  benchmarks.md  development-guide.md  envelope-protocol.md  faq.md  getting-started.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/adr/: ADR-000-strategy-decorator-architecture.md  ADR-001-protocol-based-interfaces.md  ADR-002-async-first.md  ADR-003-field-level-encryption.md  ADR-004-adk-schema-compatibility.md  ADR-005-exception-hierarchy.md  ADR-006-configuration-error.md  ADR-007-architecture-migration.md  ADR-008-per-key-random-salt.md  ADR-009-key-rotation-strategy.md  README.md  index.md
docs/contributing/: docstring-templates.md
docs/how-to/: backend-authoring.md  key-rotation.md
docs/reference/: index.md
docs/stylesheets/: theme.css
examples/: basic_usage.py
scripts/: code_quality_check.sh  docstring_docs_coverage.py  docstring_enrichment.py  docstring_freshness.py  docstring_griffe_check.py  gen_ref_pages.py  spike_typedecorator.py
specs/002-encryption-backend-protocol/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-encryption-backend-protocol/checklists/: requirements.md
specs/003-fernet-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fernet-backend/checklists/: requirements.md
specs/003-fernet-backend/contracts/: fernet-backend-api.md
specs/004-exception-hierarchy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-exception-hierarchy/checklists/: requirements.md
specs/005-serialization-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-serialization-layer/checklists/: requirements.md
specs/005-serialization-layer/contracts/: serialization.py
specs/006-encrypted-session-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-encrypted-session-service/checklists/: requirements.md
specs/006-encrypted-session-service/contracts/: encrypted_session_service.py
src/adk_secure_sessions/: __init__.py  exceptions.py  protocols.py  rotation.py  serialization.py
src/adk_secure_sessions/backends/: __init__.py  aes_gcm.py  fernet.py
src/adk_secure_sessions/services/: __init__.py  encrypted_session.py  models.py  type_decorator.py
tests/: conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_encryption_overhead.py
tests/integration/: __init__.py  conftest.py  test_adk_conformance.py  test_adk_crud.py  test_adk_encryption.py  test_adk_integration.py  test_adk_runner.py  test_concurrent_writes.py  test_conformance.py  test_docs_examples.py  test_encryption_boundary.py  test_key_rotation.py  test_multi_backend.py
tests/unit/: conftest.py  test_aes_gcm_backend.py  test_encrypted_session_service.py  test_exceptions.py  test_fernet_backend.py  test_fernet_salt.py  test_models.py  test_protocols.py  test_public_api.py  test_rotation.py  test_serialization.py  test_type_decorator.py
